# scraper

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
src/dendrite_scraper/: cli.py  safety.py  scraper.py  server.py  settings.py
src/scraper/: __init__.py  __main__.py  cli.py  safety.py  scraper.py  server.py  settings.py
tests/: conftest.py  test_cli.py  test_safety.py  test_scraper.py  test_server.py  test_settings.py
