[project]
name = "dendrite-scraper"
version = "0.2.0"  # x-release-please-version
description = "Web scraping service with anti-bot detection, Jina fallback, and model cleanup"
license = "MIT"
authors = [{ name = "Kevin Frilot" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.9",
    "fastapi>=0.136.3",
    "httpx>=0.27.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dendrite_scraper"]

[project.scripts]
dendrite-scraper = "dendrite_scraper.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[tool.uv]
override-dependencies = [
    # crawl4ai 0.8.9 still declares lxml ~=5.3; force the patched line.
    "lxml>=6.1.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dendrite_scraper"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
